=======
CHANGES
=======

0.4.2p4
------
- orm
    - proper error message is raised when trying to 
      access expired instance attributes with no session
      present
      
- dialects
    - finally added PGMacAddr type to postgres 
      [ticket:580]
    
0.4.2p3
------
- general
    - sub version numbering scheme changed to suite
      setuptools version number rules; easy_install -u
      should now get this version over 0.4.2.
      
- sql
    - Text type is properly exported now and does not
      raise a warning on DDL create; String types with no
      length only raise warnings during CREATE TABLE
      [ticket:912]

    - new UnicodeText type is added, to specify an
      encoded, unlengthed Text type
      
    - fixed bug in union() so that select() statements
      which don't derive from FromClause objects can be
      unioned

- orm
    - fixed bug with session.dirty when using "mutable
      scalars" (such as PickleTypes)
      
    - added a more descriptive error message when flushing
      on a relation() that has non-locally-mapped columns
      in its primary or secondary join condition
      
- dialects
    - Fixed reflection of mysql empty string column
      defaults.

0.4.2b  (0.4.2p2)
------
- sql
    - changed name of TEXT to Text since its a "generic"
      type; TEXT name is deprecated until 0.5. The
      "upgrading" behavior of String to Text when no
      length is present is also deprecated until 0.5; will
      issue a warning when used for CREATE TABLE
      statements (String with no length for SQL expression
      purposes is still fine) [ticket:912]

    - generative select.order_by(None) / group_by(None)
      was not managing to reset order by/group by
      criterion, fixed [ticket:924]

- orm
    - suppressing *all* errors in
      InstanceState.__cleanup() now.

    - fixed an attribute history bug whereby assigning a
      new collection to a collection-based attribute which